# PurritoBin

./: .clang-format  .clangd  .entrypoint.sh  .gitignore  .run.sh  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  lgtm.yml  main.cc  meson.build  meson_options.txt  package.json  paste.html  purrito.cc  purrito.h  purrito.hh
.github/workflows/: pipeline.yml
clients/: POSIX_shell_client.sh  purr.sh
docker/: purritobin_wrapper
frontend/: about.html  decrypt.js  index.html  paste.html  style.css  submit.js
helps/: openbsd
man/: purrito.1
services/: openbsd  openrc  systemd
src/: main.cc  purrito.cc  purrito.h  settings.h
tests/: HELPER_test_nossl_concurrent_pastes.sh  HELPER_test_nossl_concurrent_pastes_really_large_no_abort.sh  HELPER_test_ssl_concurrent_pastes_really_large_no_abort.sh  Makefile  README.md  common.sh  common_functions.sh  test_concurrent_pastes.sh  test_concurrent_pastes_helper.sh  test_concurrent_pastes_really_large_no_abort.sh  test_concurrent_pastes_really_large_no_abort_helper.sh  test_concurrent_pastes_really_large_no_abort_ssl.sh  test_concurrent_pastes_really_large_no_abort_ssl_helper.sh  test_concurrent_pastes_ssl.sh  test_concurrent_pastes_ssl_helper.sh  test_nossl_concurrent_pastes.sh  test_nossl_concurrent_pastes_really_large_no_abort.sh  test_nossl_getpaste.sh  test_nossl_single_paste.sh  test_nossl_single_paste_abort.sh  test_nossl_single_paste_really_large_abort.sh  test_nossl_single_paste_really_large_no_abort.sh  test_nossl_single_paste_runtime_change_perms.sh  test_single_paste.sh  test_single_paste_abort.sh  test_single_paste_really_large_abort.sh  test_single_paste_really_large_no_abort.sh  test_single_paste_runtime_change_perms.sh  test_single_paste_ssl.sh  test_ssl_concurrent_pastes.sh  test_ssl_concurrent_pastes_really_large_no_abort.sh  test_ssl_getpaste.sh  test_ssl_single_paste.sh
